--- a/templates/index.html
+++ b/templates/index.html
@@ -34,5 +34,6 @@
             {% endfor %}
         </tbody>
     </table>
+    <a href="{{ url_for('export_to_file') }}" class="export-button">Экспорт в TXT</a>
 </body>
 </html>
