--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Параметры системы</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body>
-    <h1>Управление параметрами</h1>
-    <a href="{{ url_for('add_parameter') }}" class="add-button">+ Добавить параметр</a>
-    
-    <table class="parameters-table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Название</th>
-                <th>Значение</th>
-                <th>Описание</th>
-                <th>Действия</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for param in parameters %}
-            <tr>
-                <td>{{ param.id }}</td>
-                <td>{{ param.name }}</td>
-                <td>{{ param.value }}</td>
-                <td>{{ param.description or '' }}</td>
-                <td class="action-links">
-                    <a href="{{ url_for('edit_parameter', id=param.id) }}" title="Редактировать">✏️</a>
-                    <a href="{{ url_for('delete_parameter', id=param.id) }}" title="Удалить" 
-                       onclick="return confirm('Вы уверены?')">❌</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <a href="{{ url_for('export_to_file') }}" class="export-button">Экспорт в XML</a>
-</body>
-</html>
+<table class="parameters-table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Название</th>
+            <th>Значение</th>
+            <th>Группа</th>
+            <th>Описание</th>
+            <th>Действия</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for param, group_name in parameters %}
+        <tr>
+            <td>{{ param.id }}</td>
+            <td>{{ param.name }}</td>
+            <td>{{ param.value }}</td>
+            <td>{{ group_name or 'Без группы' }}</td>
+            <td>{{ param.description or '' }}</td>
+            <td class="action-links">
+                <a href="{{ url_for('edit_parameter', id=param.id) }}">✏️</a>
+                <a href="{{ url_for('delete_parameter', id=param.id) }}">❌</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
