--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
     <form action="{{ url_for('groups') }}">
         <button type="submit">Группы</button>
     </form>
+    <form action="{{ url_for('profiles') }}">
+        <button type="submit">Профили</button>
+    </form>
+
 </head>
 <body>
     <h1>Управление параметрами</h1>
